src/testData/commands/errors/test.ts
import { defineCommand } from "../../../index.js";

export default defineCommand({
    key: "test"
});
